Update project dependencies and enhance data loading process
- Removed ModelScope dependency and replaced it with requests and Flask for improved data handling and web interface.
- Updated .gitignore to allow tracking of uv.lock for dependency management.
- Enhanced README.md to reflect changes, including the addition of a web validation interface for real-time sentiment analysis.
- Refactored train.py to download and load the IMDB dataset directly from Stanford AI Lab, improving dataset management and accessibility.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,12 @@ description = "基于PyTorch的IMDB情感分析项目"
 requires-python = ">=3.8"
 dependencies = [
     "torch>=2.0.0",
-    "modelscope>=1.0.0",
+    "requests>=2.25.0",
+    "flask>=2.0.0",
 ]
 
 [project.scripts]
 zimdb-train = "train:main"
 
-[tool.uv]
-dev-dependencies = []
+[dependency-groups]
+dev = []
